@@ -1,6 +1,7 @@
 package edu.ucsb.cs156.courses.controllers;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -11,13 +12,15 @@ import edu.ucsb.cs156.courses.ControllerTestCase;
 import edu.ucsb.cs156.courses.entities.User;
 import edu.ucsb.cs156.courses.repositories.UserRepository;
 import edu.ucsb.cs156.courses.testconfig.TestConfig;
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.autoconfigure.orm.jpa.AutoConfigureDataJpa;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.Import;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MvcResult;
 
@@ -44,25 +47,48 @@ public class UsersControllerTests extends ControllerTestCase {
   public void users__admin_logged_in() throws Exception {
 
     // arrange
-
     User u1 = User.builder().id(1L).build();
     User u2 = User.builder().id(2L).build();
-    User u = currentUserService.getCurrentUser().getUser();
 
-    ArrayList<User> expectedUsers = new ArrayList<>();
-    expectedUsers.addAll(Arrays.asList(u1, u2, u));
+    Page<User> fakePage = new PageImpl<>(List.of(u1, u2));
 
-    when(userRepository.findAll()).thenReturn(expectedUsers);
-    String expectedJson = mapper.writeValueAsString(expectedUsers);
+    when(userRepository.findAll(any(Pageable.class))).thenReturn(fakePage);
+
+    String expectedJson = mapper.writeValueAsString(List.of(u1, u2));
 
     // act
-
     MvcResult response =
         mockMvc.perform(get("/api/admin/users")).andExpect(status().isOk()).andReturn();
 
     // assert
+    verify(userRepository, times(1)).findAll(any(Pageable.class));
+    String responseString = response.getResponse().getContentAsString();
+    assertEquals(expectedJson, responseString);
+  }
 
-    verify(userRepository, times(1)).findAll();
+  // ─────────────────────────────────────────────────────────────
+  // New: paged endpoint test (keeps same style / structure)
+  // ─────────────────────────────────────────────────────────────
+  @WithMockUser(roles = {"ADMIN", "USER"})
+  @Test
+  public void users_paged__admin_logged_in() throws Exception {
+
+    // arrange
+    User u1 = User.builder().id(1L).build();
+    User u2 = User.builder().id(2L).build();
+
+    Page<User> fakePage = new PageImpl<>(List.of(u1, u2));
+
+    when(userRepository.findAll(any(Pageable.class))).thenReturn(fakePage);
+
+    String expectedJson = mapper.writeValueAsString(fakePage);
+
+    // act
+    MvcResult response =
+        mockMvc.perform(get("/api/admin/users/paged")).andExpect(status().isOk()).andReturn();
+
+    // assert
+    verify(userRepository, times(1)).findAll(any(Pageable.class));
     String responseString = response.getResponse().getContentAsString();
     assertEquals(expectedJson, responseString);
   }
